2011-10-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_lookup_symlink): Fix handling of
	long symlinks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle symlinks and long names on tar and cpio.

	* grub-core/fs/cpio.c (ATTR_TYPE): New definition.
	(ATTR_FILE): Likewise.
	(ATTR_DIR): Likewise.
	(ATTR_LNK): Likewise.
	(grub_cpio_data) [MODE_USTAR]: New fields linkname and linkname_alloc.
	(grub_cpio_find_file): Fill mode, handle linkname field as well as
	L and K entries.
	(grub_cpio_mount): Zero-fill data.
	(handle_symlink): New function.
	(grub_cpio_dir): Handle symlinks.
	(grub_cpio_open): Likewise.
	(grub_cpio_close) [MODE_USTAR]: Free linkname.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix iso9660 filename limitations and fix memory leaks.

	* grub-core/fs/iso9660.c (set_rockridge): Free sua at the end.
	(grub_iso9660_iterate_dir): Fix slash handling in symlinks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix JFS file name length limitations.

	* grub-core/fs/jfs.c (grub_jfs_inode): Fix in-place symlink length.
	(grub_jfs_diropen): Fix maximum filename length.
	(grub_jfs_getent): Fix filename length.
	(grub_jfs_lookup_symlink): Fix size checks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/mips/linux.c (loongson_machtypes): Fix fuloong type
	string.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Leverage BFS implementation to read AFS.

	* Makefile.util.def (libgrubmods): Add afs.c.
	* grub-core/Makefile.core.def (afs): New module
	* grub-core/fs/afs.c: New file.
	* grub-core/fs/bfs.c [MODE_AFS]: Adapt for AFS.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c: Macroify and add some necessary sanity checks.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c: Run indent.

2011-10-30  Vladimir Serbinenko  <phcoder@gmail.com>

	BFS implementation based on the specification.
